[package]
name = "rawdio"
version = "0.6.0" 
edition = "2021"
license = "MIT"
description = "An Audio Engine, inspired by the Web Audio API"
homepage = "https://github.com/joefocusrite/rawdio"
keywords = ["audio"]
categories = ["multimedia::audio"]

[dependencies]
atomic_float = "0.1.0"
crossbeam = "0.8.2"
fixed = "1.11.0"
itertools = "0.10.5" 
rand = "0.8.5"
rustfft = {version = "6.1.0", features = ["avx", "sse", "neon"] }

[dev-dependencies]
anyhow = "1.0.51"
approx = "0.5.0" 
cpal = "0.15.0"
criterion = "0.4"
futures = "0.3.17"
futures-channel = "0.3.17"
futures-util = "0.3.17"
hound = "3.4.0"
structopt = "0.3.26"

[[bench]]
name = "adsr_benches"
harness = false

[[bench]]
name = "audio_buffer_benches"
harness = false

[[bench]]
name = "biquad_benches"
harness = false

[[bench]]
name = "envelope_benches"
harness = false

[[bench]]
name = "gain_benches"
harness = false

[[bench]]
name = "graph_benches"
harness = false

[[bench]]
name = "oscillator_benches"
harness = false

[[bench]]
name = "sampler_benches" 
harness = false

[[bench]]
name = "waveshaper_benches"
harness = false

[[bench]]
name = "convolution_benches"
harness = false
