[package]
name = "rawdio"
version = "0.13.0"
edition = "2021"
license = "MIT"
description = "An Audio Engine, inspired by the Web Audio API"
homepage = "https://github.com/joe-noel-dev/rawdio"
keywords = ["audio"]
categories = ["multimedia::audio"]

[dependencies]
approx = "0.5.0"
atomic_float = "0.1.0"
crossbeam = "0.8.2"
fixed = "1.11.0"
itertools = "0.12.0" 
rand = "0.8.5"
rustfft = {version = "6.1.0", features = ["avx", "sse", "neon"] }

[lib]
doctest = false

[dev-dependencies]

criterion = "0.5"

[[bench]]
name = "adsr_benches"
harness = false

[[bench]]
name = "audio_buffer_benches"
harness = false

[[bench]]
name = "biquad_benches"
harness = false

[[bench]]
name = "envelope_benches"
harness = false

[[bench]]
name = "gain_benches"
harness = false

[[bench]]
name = "graph_benches"
harness = false

[[bench]]
name = "oscillator_benches"
harness = false

[[bench]]
name = "sampler_benches" 
harness = false

[[bench]]
name = "waveshaper_benches"
harness = false

[[bench]]
name = "convolution_benches"
harness = false

[[bench]]
name = "compressor_benches"
harness = false

[[bench]]
name = "pan_benches"
harness = false
